--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vue-music",
   "version": "1.0.0",
   "description": "音乐播放器",
-  "author": "ltleelong <ltleelong@163.com>",
+  "author": "ustbhuangyi <280309453@qq.com>",
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
@@ -11,8 +11,20 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "axios": "^0.16.2",
+    "babel-polyfill": "^6.26.0",
+    "babel-runtime": "^6.0.0",
+    "better-scroll": "^1.3.1",
+    "create-keyframe-animation": "^0.1.0",
+    "fastclick": "^1.0.6",
+    "good-storage": "^1.0.1",
+    "js-base64": "^2.1.9",
+    "jsonp": "^0.2.1",
+    "lyric-parser": "^1.0.1",
     "vue": "^2.3.3",
-    "vue-router": "^2.3.1"
+    "vue-lazyload": "1.0.3",
+    "vue-router": "^2.5.3",
+    "vuex": "^2.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
@@ -23,6 +35,7 @@
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
+    "babel-polyfill": "^6.2.0",
     "chalk": "^1.1.3",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
@@ -49,15 +62,18 @@
     "ora": "^1.2.0",
     "rimraf": "^2.6.0",
     "url-loader": "^0.5.8",
-    "vue-loader": "^12.1.0",
-    "vue-style-loader": "^3.0.1",
+    "vue-loader": "^11.3.4",
+    "vue-style-loader": "^2.0.5",
     "vue-template-compiler": "^2.3.3",
-    "webpack": "^2.6.1",
+    "webpack": "^2.3.3",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.18.0",
     "webpack-merge": "^4.1.0",
-    "stylus":"^0.54.5",
-    "stylus-loader":"^2.1.1"
+    "stylus": "^0.54.5",
+    "stylus-loader": "^2.1.1",
+    "vconsole": "^2.5.2",
+    "compression-webpack-plugin": "^0.4.0",
+    "compression": "^1.7.0"
   },
   "engines": {
     "node": ">= 4.0.0",
